xsltexi Texinfo file generation

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tools/xspec"]
 	path = tools/xspec
 	url = https://github.com/lovullo/xspec
+[submodule "tools/xsltexi"]
+	path = tools/xsltexi
+	url = https://github.com/lovullo/xsltexi
