--- a/Makefile.am
+++ b/Makefile.am
@@ -18,14 +18,14 @@
 
 SUBDIRS = doc
 
-path_src  := src
-path_test := test
+path_src   := src
+path_test  := test
 
 test_apply := $(path_test)/apply/partial-test.xsl.apply \
               $(path_test)/apply/thrush-test.xsl.apply \
               $(path_test)/transform/apply-gen-test-in.xsl.apply
 
-.PHONY: check test
+.PHONY: check test texis
 
 test: check
 check:  $(test_apply)
@@ -35,6 +35,3 @@ check:  $(test_apply)
 	$(JAVA) -jar "$(SAXON_CP)" \
 	    -xsl:"$(path_src)/transform/apply-gen.xsl" \
 	    "$<" > "$@"
-
-clean:
-	$(RM) "$(test_in_apply_gen)"
