clean-local target for *.apply cleanup
Makefile.am (clean-local): Clean up generated *.apply files for tests.

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,3 +35,6 @@ check:  $(test_apply)
 	$(JAVA) -jar "$(SAXON_CP)" \
 	    -xsl:"$(path_src)/transform/apply-gen.xsl" \
 	    "$<" > "$@"
+
+clean-local:
+	$(RM) $(test_apply)
